--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Print Commit Message
+name: Print Commit Information
 
 on:
   push:
@@ -6,11 +6,13 @@ on:
       - master
       
 jobs:
-  print-message:
+  print-commit-info:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
       
-      - name: Print commit message
-        run: echo "The commit message is ${{github.event.head_commit.message}}"
+      - name: Print commit information
+        run: |
+          git log -1 --pretty=format:"Commit: %H%nAuthor: %an%nDate: %ad%nMessage: %s"
     
